--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,8 @@
+version: "3.8"
+
 services:
   app:
-    image: pedrowww777/app:latest
+    image: pedrowww777/app:dev
     ports:
       - "3000:3000"
     environment:
@@ -11,23 +13,20 @@ services:
       - db
 
   frontend:
-    image: nginx:alpine
+    image: pedrowww777/frontend:dev
     ports:
       - "8080:80"
-    volumes:
-      - ./frontend:/usr/share/nginx/html:ro
 
   db:
-    image: mysql:8
+    image: pedrowww777/mysql:dev
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: todos
     ports:
       - "3306:3306"
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./db/seed-dev.sql:/docker-entrypoint-initdb.d/seed.sql
       - dev-db-data:/var/lib/mysql
 
 volumes:
   dev-db-data:
+
